# MandelbrotExplorer

./: CMakeLists.txt  Mandelbrot.cu  README.md
